--- a/LeckerBag/WebContent/bestellung_kunde_s2.html
+++ b/LeckerBag/WebContent/bestellung_kunde_s2.html
@@ -233,57 +233,43 @@
                                                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" data-pg-collapsed>
                                                     <p id="yui_patched_v3_18_1_2_1434183585072_222">Meine Favoriten</p> 
                                                 </div>
-                                                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" data-pg-collapsed>
+                                                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
                                                     <div id="favorites_carousel" class="carousel slide">
                                                         <!-- Carousel items -->
                                                         <div class="carousel-inner">
                                                             <div class="item active">
                                                                 <div class="row">
-                                                                    <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                    <div class="col-sm-3 fav_list_holder">
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item">Milch</li>
+                                                                            <li class="list-group-item">Banane</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Mortadella</li>                                                                             
+                                                                            <li class="list-group-item">Milch</li>
+                                                                            <li class="list-group-item">Wasser Medium</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item">Erdbeermilch</li>
+                                                                            <li class="list-group-item">Banane</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
-                                                                    </div>
-                                                                </div>
-                                                                <!--/row-->
-                                                            </div>
-                                                            <!--/item-->
-                                                            <div class="item">
-                                                                <div class="row">
-                                                                    <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
-                                                                    </div>
-                                                                    <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
-                                                                    </div>
-                                                                    <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
-                                                                    </div>
-                                                                    <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                         <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Schinken</li>                                                                             
+                                                                            <li class="list-group-item">Milch</li>
+                                                                            <li class="list-group-item">Banane</li>                                                                             
+                                                                            <li class="list-group-item">Trauben hell</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                 </div>
                                                                 <!--/row-->
@@ -292,24 +278,36 @@
                                                             <div class="item">
                                                                 <div class="row">
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item">Wasser Medium</li>
+                                                                            <li class="list-group-item">Wasser Medium</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Mettwurst</li>                                                                             
+                                                                            <li class="list-group-item">Milch</li>
+                                                                            <li class="list-group-item">Clementine</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Tomate Mozzarella</li>                                                                             
+                                                                            <li class="list-group-item">Milch</li>
+                                                                            <li class="list-group-item">Banane</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                     <div class="col-sm-3">
-                                                                        <a href="#x" class="thumbnail thumbnail_favorites">
-                                                                            <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                                                                        </a>
+                                                                        <ul class="list-group fav_list"> 
+                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item">Milch</li>
+                                                                            <li class="list-group-item">Banane</li>                                                                             
+                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                        </ul>
                                                                     </div>
                                                                 </div>
                                                                 <!--/row-->
@@ -454,6 +452,22 @@
     			    ).render();
     			  }
     			);
+    </script>
+    <script>
+		var ul = document.getElementsByClassName('fav_list');
+		console.log(ul+"JUHUU!!!");
+		for(var i=0; i<ul.length; i++){
+			if(ul[i].style.borderColor == '#ddd'){
+				ul[i].onclick = function(event) {
+					ul[i].style.borderColor == '#868492';
+				};
+			}
+			else{
+				ul[i].onclick = function(event) {
+					ul[i].style.borderColor == '#868492';
+				};
+			}
+		}
     </script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
