--- a/LeckerBag/WebContent/header.html
+++ b/LeckerBag/WebContent/header.html
@@ -11,13 +11,13 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
-    </head>     
+    </head>  
     <body>
         <div class="row">
             <div class="col-md-12 col-lg-12">
                 <div class="row">
                     <div class="col-md-2 col-sm-2 col-lg-2 col-xs-2 nav_sn">
-                        <a href="#" class="nav_sn_link" style="margin-left:15px;"><i class="fa fa-adjust"></i></a>                          
+                        <a href="javascript:void(0)" onclick="" class="nav_sn_link" style="margin-left:15px;"><i class="fa fa-adjust"></i></a>                          
                     </div>
                     <div class="text-right col-md-10 col-sm-10 col-xs-10 col-lg-10 nav_sn">
                         <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a>
@@ -84,7 +84,8 @@
                 </div>                 
             </div>
         </div>         
-        <!-- Ende des Dokumentes -->         
+        <!-- Ende des Dokumentes -->
+
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
