--- a/LeckerBag/WebContent/bestellung_kunde_s2.html
+++ b/LeckerBag/WebContent/bestellung_kunde_s2.html
@@ -241,34 +241,34 @@
                                                                 <div class="row">
                                                                     <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
-                                                                            <li class="list-group-item">Milch</li>
-                                                                            <li class="list-group-item">Banane</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Milch</li>
+                                                                            <li class="list-group-item list_obst">Banane</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Mortadella</li>                                                                             
-                                                                            <li class="list-group-item">Milch</li>
-                                                                            <li class="list-group-item">Wasser Medium</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Mortadella</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Milch</li>
+                                                                            <li class="list-group-item list_getraenk">Wasser Medium</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
-                                                                            <li class="list-group-item">Erdbeermilch</li>
-                                                                            <li class="list-group-item">Banane</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Erdbeermilch</li>
+                                                                            <li class="list-group-item list_obst">Banane</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                          <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Schinken</li>                                                                             
-                                                                            <li class="list-group-item">Milch</li>
-                                                                            <li class="list-group-item">Banane</li>                                                                             
-                                                                            <li class="list-group-item">Trauben hell</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Schinken</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Milch</li>
+                                                                            <li class="list-group-item list_obst">Banane</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Trauben hell</li>                                                                             
                                                                         </ul>
                                                                     </div>
                                                                 </div>
@@ -277,36 +277,36 @@
                                                             <!--/item-->
                                                             <div class="item">
                                                                 <div class="row">
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
-                                                                            <li class="list-group-item">Wasser Medium</li>
-                                                                            <li class="list-group-item">Wasser Medium</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Wasser Medium</li>
+                                                                            <li class="list-group-item list_getraenk">Wasser Medium</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Mettwurst</li>                                                                             
-                                                                            <li class="list-group-item">Milch</li>
-                                                                            <li class="list-group-item">Clementine</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Mettwurst</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Milch</li>
+                                                                            <li class="list-group-item list_obst">Clementine</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Tomate Mozzarella</li>                                                                             
-                                                                            <li class="list-group-item">Milch</li>
-                                                                            <li class="list-group-item">Banane</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Tomate Mozzarella</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Milch</li>
+                                                                            <li class="list-group-item list_obst">Banane</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="col-sm-3">
+                                                                    <div class="col-sm-3 fav_list_holder">
                                                                         <ul class="list-group fav_list"> 
-                                                                            <li class="list-group-item">Brötchen mit Salami und Käse</li>                                                                             
-                                                                            <li class="list-group-item">Milch</li>
-                                                                            <li class="list-group-item">Banane</li>                                                                             
-                                                                            <li class="list-group-item">Apfel</li>                                                                             
+                                                                            <li class="list-group-item list_rohling">Brötchen mit Salami und Käse</li>                                                                             
+                                                                            <li class="list-group-item list_getraenk">Milch</li>
+                                                                            <li class="list-group-item list_obst">Banane</li>                                                                             
+                                                                            <li class="list-group-item list_obst">Apfel</li>                                                                             
                                                                         </ul>
                                                                     </div>
                                                                 </div>
@@ -454,19 +454,18 @@
     			);
     </script>
     <script>
-		var ul = document.getElementsByClassName('fav_list');
-		console.log(ul+"JUHUU!!!");
+    
+    
+		var ul = $(".fav_list");
 		for(var i=0; i<ul.length; i++){
-			if(ul[i].style.borderColor == '#ddd'){
-				ul[i].onclick = function(event) {
-					ul[i].style.borderColor == '#868492';
-				};
-			}
-			else{
-				ul[i].onclick = function(event) {
-					ul[i].style.borderColor == '#868492';
-				};
-			}
+			ul[i].onclick = function(event) {
+				if($(this).attr("class") == "list-group fav_list"){
+					$(this).addClass('fav_list_active');
+				}
+				else{
+					$(this).removeClass('fav_list_active');
+				}
+			};
 		}
     </script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
