--- a/LeckerBag/WebContent/header2.html
+++ b/LeckerBag/WebContent/header2.html
@@ -61,7 +61,7 @@
 					                                          <a href="dashboard_lieferant.html">Mein Leckerbag</a> 
 					                                      </li>                                         
 					                                      <li class="nav_item"> 
-					                                          <a href="#">Über Uns</a> 
+					                                          <a href="Ueber_Uns.html">Über Uns</a> 
 					                                      </li>                                         
 					                                      <li class="nav_item"> 
 					                                          <a href="#">Kontakt</a> 
